# gethelp

./: 404.html  README.md  index.html  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  tailwind.config.js  versions.json
01_application/: index.html
01_application/01_platform/: index.html
01_application/02_finance/: index.html
01_application/03_sales/: index.html
01_application/04_marketing/: index.html
01_application_guide/: index.html
02_solution_guide/: index.html
03_AI_solution_guide/: index.html
03_system_guide/: index.html
04_developer/: index.html
04_developer_guide/: index.html
04_integration_guide/: index.html
05_developer_cookbook/: index.html
10_ANSIS/: index.html
10_application_guide/: index.html
10_odoo/: index.html
10_perfectwork/: index.html
10_platform/: index.html
16.0/: 404.html  CNAME  index.html  sitemap.xml  web.js
17.0/: 404.html  index.html  sitemap.xml  web.js
20_analytics/: index.html
20_integration_guide/: index.html
20_solutions/: index.html
3.0/: 404.html  index.html  sitemap.xml
30_infrastructure/: index.html
4.0/: 404.html  index.html  sitemap.xml
5.0/: 404.html  index.html  sitemap.xml
50_developer/: index.html
50_developer_cookbook/: index.html
9988/: index.html
assets/: index.html
blog/: index.html
docs/: .pages  index.md  web.js
internal/: index.html
javascripts/: index.html
latest/: main.html
overrides/: main.html
search/: search_index.json
site/: index.html  sitemap.xml
stylesheets/: index.html
(+2241 files in other folders)
