[project]
name = "pwdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mike>=2.1.3",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-breadcrumbs-plugin>=0.1.14",
    "mkdocs-material>=9.6.15",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-video>=1.5.0",
]
